--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
+    "nodemailer": "^6.9.2",
     "razorpay": "^2.8.6",
     "sequelize": "^6.31.0"
   },
