--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.2",
     "razorpay": "^2.8.6",
